# sport-progress-bot

./: .gitignore  Spacefile  constants.base.py  main.py  messages.py  model.py  pyproject.toml  request_handler.py  requirements.txt  server_api.py
commands/: __init__.py  add_activity.py  constants.py  exercises.py  magic_action.py  set_language.py  start.py
commands/utils/: additional_params.py  numeric_keyboard.py
request_handler/: __init__.py  activity_add_command.py  base.py  exercise_add_command.py  exercises_command.py  language_command.py  start_command.py
