[tool.poetry]
name = "sport-progress-bot"
version = "0.1.0"
description = ""
authors = ["singapore9 <sharik.and@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "20.1"
requests = "^2.28.1"
fastapi = {extras = ["all"], version = "^0.81.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
